# noid-welcome

./: Cargo.toml  LICENSE  README.md  noid-welcome.sh  package.json  svelte.config.js
scripts/: oxidize-system.sh  qemu-virt-manager.sh
src/: app.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/tabs/: GetSoftwareTab.svelte  NdpmTab.svelte  TabOne.svelte  TabTwo.svelte  TweaksTab.svelte  WelcomeTab.svelte
src/routes/: +layout.svelte  +page.svelte
